--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,6 +3,10 @@
 html {
   font-size: 62.5%;
   font-family: "Rubik", sans-serif;
+
+  @include mediaQuery(desktop) {
+    font-size: 70%;
+  }
 }
 
 body {
